--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header class="navigation">
             <div class="inline-block" class="logo">
-                <img src="Images/Artboard – 2.png">
+                <img src="./Images/Artboard – 2.png">
             </div>
                  <nav class="inline-block">
                       <ul>
